# cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Findextism.cmake  Makefile  README.md  example.cpp  extism-cpp-namespaced-targets.cmake  extism-cpp-static.pc.in  extism-cpp.pc.in  extism-cppConfig.cmake.in  extism.cpp  extism.hpp
.github/: CODEOWNERS
.github/actions/libextism/: action.yml
.github/workflows/: ci-cpp.yml  ci.yml
cmake/: Findextism.cmake  Findjsoncpp.cmake
src/: current_plugin.cpp  extism.cpp  extism.hpp  function.cpp  manifest.cpp  plugin.cpp
test/: test.cpp
